// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TraitsCreationContainer/> component rendering when there are signals selected matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TraitsCreationContainer
    selectedSignals={
      Object {
        "records": Array [
          Object {
            "rowIndex": 0,
            "signalType": "Adobe Analytics",
          },
        ],
        "selectionMessage": "1 Real-time signal selected ",
        "warning": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "handleTraitsCreation": undefined,
      "multiCreation": true,
      "selectedSignals": Object {
        "records": Array [
          Object {
            "rowIndex": 0,
            "signalType": "Adobe Analytics",
          },
        ],
        "selectionMessage": "1 Real-time signal selected ",
        "warning": false,
      },
      "traitsCreationLabelText": "Create Trait From Multi Signals",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "handleTraitsCreation": undefined,
        "multiCreation": true,
        "selectedSignals": Object {
          "records": Array [
            Object {
              "rowIndex": 0,
              "signalType": "Adobe Analytics",
            },
          ],
          "selectionMessage": "1 Real-time signal selected ",
          "warning": false,
        },
        "traitsCreationLabelText": "Create Trait From Multi Signals",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<TraitsCreationContainer/> component rendering when there is no signal selected matches snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TraitsCreationContainer
    createTraitFromMultiSignals={[MockFunction]}
    selectedSignals={
      Object {
        "records": Array [],
        "selectionMessage": "",
        "warning": false,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
